--- a/PayMe/PayMe/Views/Expense/Detail.cshtml
+++ b/PayMe/PayMe/Views/Expense/Detail.cshtml
@@ -37,14 +37,14 @@
             <div class="row">
 
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.CategoryID, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.CategoryID, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.DropDownList("CategoryID", ViewBag.Category as SelectList, "--Please select--"
 , new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
                 </div>
                
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.CurrencyBillNo, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.CurrencyBillNo, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.CurrencyBillNo, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.CurrencyBillNo, "", new { @class = "text-danger" })
                 </div>
@@ -56,13 +56,13 @@
                 <div class="clearfix"></div>
                 <div class="col-lg-4">
 
-                    @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.Amount, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.BillDate, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.BillDate, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.BillDate, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.BillDate, "", new { @class = "text-danger" })
                 </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
                 </div>
@@ -180,8 +180,10 @@
 
     });
    
-    function Download(value) {
-        return '<a href="/Expense/DownloadFile/' + value + '"><em class="fa fa-download"></a>';
+    function Download(value,row) {
+        if (row.HasAttachment != null && row.HasAttachment != false ) {
+            return '<a href="/Expense/DownloadFile/' + value + '"><em class="fa fa-download"></a>';
+        }
     }  
     function dateFormat(value, row, index) {
         return moment(value).format('MM/DD/YYYY');
